[gd_scene load_steps=7 format=3 uid="uid://fdgjnt3f4u6u"]

[ext_resource type="Script" path="res://Scripts/GUI/main_menu_ui.gd" id="1_go47f"]
[ext_resource type="Texture2D" uid="uid://dtb46jiyiaq7x" path="res://Assets/UI/Main Menu/MainMenu-Background.png" id="2_vor62"]
[ext_resource type="Texture2D" uid="uid://bfo3xx8wk4uwa" path="res://Assets/UI/Main Menu/Story-MM Button.png" id="3_x00ra"]
[ext_resource type="Texture2D" uid="uid://k13vku8ldwu8" path="res://Assets/UI/Main Menu/Infinite-MM Button.png" id="4_v5xf7"]
[ext_resource type="Texture2D" uid="uid://c5bxrhuhkh2rg" path="res://Assets/UI/Main Menu/Options-MM Button.png" id="5_qnn5m"]
[ext_resource type="Texture2D" uid="uid://xythhli447tu" path="res://Assets/UI/Main Menu/Exit-MM Button.png" id="6_7epq6"]

[node name="MainMenuUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("1_go47f")
metadata/_edit_horizontal_guides_ = []

[node name="BackgroundImage" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_vor62")
expand_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 161.0
offset_top = -238.0
offset_right = 202.0
offset_bottom = -182.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(12, 12)

[node name="StoryButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_x00ra")
texture_pressed = ExtResource("3_x00ra")

[node name="InfiniteButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_v5xf7")
texture_pressed = ExtResource("4_v5xf7")

[node name="OptionsButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_qnn5m")
texture_pressed = ExtResource("5_qnn5m")

[node name="ExitButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("6_7epq6")
texture_pressed = ExtResource("6_7epq6")

[connection signal="pressed" from="VBoxContainer/StoryButton" to="." method="_on_story_button_pressed"]
[connection signal="pressed" from="VBoxContainer/InfiniteButton" to="." method="_on_infinite_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
